objects/Assessment_Package__c.object
<CustomObject>
    <fields>
        <fullName>Do_you_T_O_all_cust_that_walk_in_thedoor__c</fullName>
        <inlineHelpText>Full Question: Do you T/O all customers that walk through the door?</inlineHelpText>
        <label>Do you T/O all cust that walk in thedoor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_follow_up_with_your_Service_cust__c</fullName>
        <inlineHelpText>Full Question: Do you follow up with your Service customers</inlineHelpText>
        <label>Do you follow up with your Service cust</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Certified_Pre_Owned_Vehicles__c</fullName>
        <label>Do you have Certified Pre-Owned Vehicles</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_BDC__c</fullName>
        <label>Do you have a BDC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_Carfax_Account__c</fullName>
        <inlineHelpText>If yes, provide the username and password in the fields provided.</inlineHelpText>
        <label>Do you have a Carfax Account?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_process_for_overdue_tasks__c</fullName>
        <label>Do you have a process for overdue tasks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_an_Autocheck_Account__c</fullName>
        <label>Do you have an Autocheck Account?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_set_goals_for_your_sales_staff__c</fullName>
        <label>Do you set goals for your sales staff?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_use_a_3rd_Party_Appraisal_Tool__c</fullName>
        <label>Do you use a 3rd Party Appraisal Tool?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_use_an_Afterhours_BDC__c</fullName>
        <label>Do you use an Afterhours BDC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_you_have_been_with_current_DMS__c</fullName>
        <label>Duration you have been with current DMS</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months to 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year to 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years to 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+ years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Explain_current_Road_to_Sale_process__c</fullName>
        <inlineHelpText>Full Question: Please explain your current &quot;Road to the Sale&quot; process</inlineHelpText>
        <label>Explain current &quot;Road to Sale&quot; process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FM_Verification_Participation__c</fullName>
        <label>FM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>F_U_service_parts_as_well_as_sales_leads__c</fullName>
        <inlineHelpText>Full Question: Do they follow up on service/parts leads as well as sales leads?</inlineHelpText>
        <label>F/U service/parts as well as sales leads</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F_U_when_they_bought_from_competitor__c</fullName>
        <inlineHelpText>Full Question: Do you follow up with customers that bought from a competitor?</inlineHelpText>
        <label>F/U when they bought from competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Cell__c</fullName>
        <label>Finance Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Email__c</fullName>
        <label>Finance Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Name__c</fullName>
        <label>Finance Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Phone__c</fullName>
        <label>Finance Manager Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Finance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (Finance Manager)</relationshipLabel>
        <relationshipName>Assessment_Packages9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_s_used_for_Customer_Proposal__c</fullName>
        <inlineHelpText>What form(s) do you use for your customer proposal?</inlineHelpText>
        <label>Form(s) used for Customer Proposal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GM_Verification_Participation__c</fullName>
        <label>GM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GSM_Verification_Participation__c</fullName>
        <label>GSM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>General_Manager_Cell__c</fullName>
        <label>General Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Manager_Email__c</fullName>
        <label>General Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>General_Manager_Name__c</fullName>
        <label>General Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Manager_Phone__c</fullName>
        <label>General Manager Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (General Manager)</relationshipLabel>
        <relationshipName>Assessment_Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Sales_Manager_Cell__c</fullName>
        <label>General Sales Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Sales_Manager_Email__c</fullName>
        <label>General Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>General_Sales_Manager_Name__c</fullName>
        <label>General Sales Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Sales_Manager_Phone__c</fullName>
        <label>General Sales Manager Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Sales Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (General Sales Manager)</relationshipLabel>
        <relationshipName>Assessment_Packages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_700_Credit_Account__c</fullName>
        <label>Has 700 Credit Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_NCC_Account__c</fullName>
        <label>Has NCC Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_a_Dealertrack_account__c</fullName>
        <label>Has a Dealertrack account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_a_Route_One_Account__c</fullName>
        <label>Has a Route One Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_a_designated_area_for_training__c</fullName>
        <inlineHelpText>Full Question: Do you have a designated area for training?</inlineHelpText>
        <label>Has a designated area for training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_notify_cus_of_pricing_change__c</fullName>
        <inlineHelpText>Full Question: How do you currently notify a customer of a pricing change?</inlineHelpText>
        <label>How do you notify cust. of price changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_long_do_you_F_U_on_unresponded_leads__c</fullName>
        <label>How long do you F/U on unresponded leads</label>
        <picklist>
            <picklistValues>
                <fullName>Currently do not</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days-90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-120 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_ILM_CRM_s_have_you_had__c</fullName>
        <inlineHelpText>How many ILM/CRM&apos;s have you had in the past?</inlineHelpText>
        <label>How many ILM/CRM&apos;s have you had?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_Websites_do_you_have__c</fullName>
        <label>How many Websites do you have?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_franchises_will_you_be_using_th__c</fullName>
        <inlineHelpText>Full Question &quot;How many franchises will be using this account&quot;</inlineHelpText>
        <label># of franchises will you be using</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_people_will_work_internet_leads__c</fullName>
        <inlineHelpText>Full Question: How many people will be working internet leads?</inlineHelpText>
        <label>How many people will work internet leads</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IM_Verification_Participation__c</fullName>
        <label>IM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IT_Contact_Cell__c</fullName>
        <label>IT Contact Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IT_Contact_Email__c</fullName>
        <label>IT Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IT_Contact_Name__c</fullName>
        <label>IT Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Contact_Phone__c</fullName>
        <label>IT Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IT_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (IT Contact)</relationshipLabel>
        <relationshipName>Assessment_Packages2aEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Verification_Participation__c</fullName>
        <label>IT Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>If_No_Photo_feed_New_Car_Photos__c</fullName>
        <label>If No, Select Vendor-New Car Photos</label>
        <picklist>
            <picklistValues>
                <fullName>VIN provided stock photos(will not export)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_No_Select_Vendor_Pre_Owned_Photos__c</fullName>
        <label>If No, Select Vendor-Pre-Owned Photos</label>
        <picklist>
            <picklistValues>
                <fullName>VIN provided stock photos(will not export)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_No_and_Selected_Other_New_Car_Photos__c</fullName>
        <label>If No &amp; Selected Other: New Car Photos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_No_and_Selected_Other_Pre_Owned_Photo__c</fullName>
        <label>If No &amp; Selected Other: Pre-Owned Photo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Referral_was_selected__c</fullName>
        <inlineHelpText>&quot;Why did you Select VinSolutions to be your new ILM/CRM provider? Please select all that apply.&quot; If Referral is selected they will need to explain their referral here.</inlineHelpText>
        <label>If Referral was selected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Select_Provider_to_Integrate__c</fullName>
        <inlineHelpText>Full Question: Do you have a Call Provider you would like to integrate with your VinSolutions account?  If yes, please select from the following:</inlineHelpText>
        <label>If Yes, Select Provider to Integrate.</label>
        <picklist>
            <picklistValues>
                <fullName>Callbright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KnowMe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Who&apos;s Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kall 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Century Interactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press One to Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teletracker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_cross_sell_please_list__c</fullName>
        <inlineHelpText>If Salespeople cross sell at any other location, please list in this field</inlineHelpText>
        <label>If cross sell, please list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_so_what_role_F_U_service_customers__c</fullName>
        <inlineHelpText>Full Question: If so, What role in your dealership follows up with your service customers?</inlineHelpText>
        <label>If so, what role F/U service customers</label>
        <picklist>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSI Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_What_group__c</fullName>
        <inlineHelpText>If they are part of a Dealer Group, this text box is to list what group.</inlineHelpText>
        <label>If yes, What group?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Who_is_your_afterhours_BDC__c</fullName>
        <inlineHelpText>If yes &quot;Do you use an Afterhours BDC?&quot;, who is your provider?</inlineHelpText>
        <label>If yes, Who is your afterhours BDC?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_explain_overdue_task_process__c</fullName>
        <label>If yes, explain overdue task process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_people_are_in_BDC_dept__c</fullName>
        <inlineHelpText>Answer, if they said Yes to &quot;Do you have a BDC Department&quot;</inlineHelpText>
        <label>If yes, how many people are in BDC dept?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_what_do_you_send_them__c</fullName>
        <inlineHelpText>If they responded yes to question &quot;Do you follow up with customers that bought from a competitor?&quot; this field must be completed.</inlineHelpText>
        <label>If yes,what do you send them?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_where_do_you_mark_certified__c</fullName>
        <label>If yes, where do you mark certified?</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_who_is_provider_e_pencil_etc__c</fullName>
        <inlineHelpText>If answered yes to: Do you use an e-pencil/desking system currently? Provider must be listed in this field</inlineHelpText>
        <label>If yes, who is provider (e-pencil etc)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact__c</fullName>
        <formula>Project__r.Implementation_Manager__c</formula>
        <label>Implementation Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_one_yr_will_you_change_your_DMS_provi__c</fullName>
        <label>Within 1yr, Will DMS provider change?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_BDCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Communication (BDCM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_DP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Communication (DP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_DeskM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Desking Manager</description>
        <label>Include in Weekly Communication (DeskM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_FM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finance Manager</description>
        <label>Include in Weekly Communication (FM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Weekly_Communication_GM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Communication (GM)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>